# PhasePhdgr

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  PhasePhckr.jucer  README.md
JUCE/: .gitignore  CMakeLists.txt  DirectoryWatcher.cpp  DirectoryWatcher.hpp  GraphEditor.cpp  GraphEditor.hpp  GraphEditorModel.cpp  GraphEditorModel.hpp  GraphEditorPositions.cpp  GraphEditorPositions.hpp  GraphView.cpp  GraphView.h  GraphViewGfx.hpp  GraphViewNodeStuff.cpp  GraphViewNodeStuff.hpp  Parameter.hpp  Parameters.cpp  Parameters.hpp  PatchEditor.cpp  PatchEditor.hpp  PhasePhckr.jucer  PhasePhckrGrid.cpp  PhasePhckrGrid.h  PhasePhckrParameter.cpp  PhasePhckrParameter.hpp  PhasePhckrPluginCommon.cpp  PhasePhckrPluginCommon.h  PhasePhckrPluginEditor.cpp  PhasePhckrPluginEditor.h  PhasePhckrPluginEditorFX.cpp  PhasePhckrPluginEditorFX.h  PhasePhckrPluginProcessor.cpp  PhasePhckrPluginProcessor.h  PhasePhckrPluginProcessorFX.cpp  PhasePhckrPluginProcessorFX.h  PhasePhckrScope.cpp  PhasePhckrScope.h  PhasePhkrScope.cpp  PhasePhkrScope.h  PluginCommon.cpp  (+17 more)
JUCE/Components/: DocView.cpp  DocView.hpp  PPGrid.cpp  PPGrid.h  ParameterKnob.hpp  PhasePhckrGrid.cpp  PhasePhckrGrid.h  PhasePhckrScope.cpp  PhasePhckrScope.h  ScopeView.cpp  ScopeView.h
JUCE/FileBrowser/: DirectoryWatcher.cpp  DirectoryWatcher.hpp  FileBrowserPanel.cpp  FileBrowserPanel.hpp  FileBrowserPanelFX.cpp  FileBrowserPanelFX.hpp  FileEditorBundle.cpp  FileEditorBundle.hpp  FileIO.cpp  FileIO.hpp
JUCE/JuceJunk/: AppConfig.h  CMakeLists.txt  JuceHeader.h  PhasePhckr.jucer
JUCE/JuceJunk/Effect/: CMakeLists.txt
JUCE/JuceJunk/JuceLibraryCode/: AppConfig.h  JuceHeader.h
JUCE/JuceJunk/Synth/: CMakeLists.txt
JUCE/JuceLibraryCode/: JuceHeader.h
JUCE/PatchEditor/: CommonEditor.cpp  CommonEditor.hpp  GraphEditor.cpp  GraphEditor.hpp  GraphEditorModel.cpp  GraphEditorModel.hpp  GraphEditorPositions.cpp  PatchEditor.cpp  PatchEditor.hpp  PopupMenus.hpp
JUCE/Utils/: Style.cpp  Style.hpp  Utils.hpp
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/api/: components.hpp  json.hpp  phasephckr.hpp  phasephckr_json.hpp  phasephdgr.hpp  phasephdgr_json.hpp
core/api/phasephckr/: components.hpp  design.hpp  docs.hpp  examples.hpp  locks.hpp  scope.hpp  synth.hpp
core/api/phasephdgr/: components.hpp  design.hpp  docs.hpp  examples.hpp  scope.hpp  synth.hpp
core/include/: phasephckr.h
core/plugin/: CMakeLists.txt  example.cpp
core/source/: CMakeLists.txt  busmodules.hpp  design_json.cpp
core/source/connectiongraph/: CMakeLists.txt  connectiongraph.cpp  connectiongraph.hpp  instruction.hpp  module.cpp  module.hpp  moduleaccessor.hpp
core/source/dsp/: CMakeLists.txt  sinc.cpp  sinc.hpp
core/source/modules/: CMakeLists.txt  abs.cpp  abs.hpp  biquad.cpp  biquad.hpp  bleposc.cpp  blitosc.cpp  blitosc.hpp  camelenvelope.cpp  camelenvelope.hpp  chamberlin.cpp  chamberlin.hpp  clamp.cpp  clamp.hpp  clampinv.cpp  clampinv.hpp  conversion.cpp  conversion.hpp  crossfade.cpp  crossfade.hpp  delay.cpp  delay.hpp  div.cpp  div.hpp  env.cpp  env.hpp  foldback.cpp  foldback.hpp  inlines.hpp  logic.cpp  logic.hpp  map.cpp  map.hpp  moduleregister.hpp  mul.cpp  mul.hpp  noise.cpp  noise.hpp  phase.cpp  phase.hpp  (+23 more)
core/source/phasephckr/: CMakeLists.txt
core/source/phasephckr/components/: components.cpp
core/source/phasephckr/design/: busmodules.hpp  design.cpp
core/source/phasephckr/docs/: docs.cpp
core/source/phasephckr/synth/: effectchain.cpp  effectchain.hpp  mpevoice.cpp  parameters.hpp  synth.cpp  synthvoice.cpp  synthvoice.hpp  voicebus.cpp  voicebus.hpp
core/source/phasephckr/utilities/: examples.cpp  json.cpp  scope.cpp
core/source/phasephdgr/: CMakeLists.txt  phasephdgr_version.cpp.in
core/source/phasephdgr/components/: components.cpp
core/source/phasephdgr/design/: busmodules.hpp  design.cpp
core/source/phasephdgr/docs/: docs.cpp
core/source/phasephdgr/synth/: effectchain.cpp  synthvoice.cpp  synthvoice.hpp  voicebus.cpp  (+1 more)
core/source/plugin/: CMakeLists.txt  example.cpp  plugin.cpp  plugin.hpp  plugin_api.hpp  pluginloader.cpp  pluginloader.hpp  pluginsregister.cpp  pluginsregister.hpp  test_loader.cpp
core/source/threading/: CMakeLists.txt  locks.cpp
core/test/: CMakeLists.txt  bench_effectchain.cpp  bench_synthvoice.cpp  cli_synth.cpp  run_module.cpp  test_connectiongraph.cpp  test_loader.cpp  test_modules.cpp  test_modules.py  test_plugin_loader.cpp  test_synthvoice.cpp
plugin_sdk/: CMakeLists.txt  example.cpp
plugin_sdk/sdk/: CMakeLists.txt  example.cpp
source/: BusModules.hpp  CMakeLists.txt  DesignConnectionGraph.hpp  Effect.hpp  EffectChain.cpp  EffectChain.hpp  MPEVoice.cpp  MPEVoice.hpp  PhasePhckr.cpp  PhasePhckr.h  PhasePhckr_internal.h  Synth.cpp  Synth.hpp  SynthVoice.cpp  SynthVoice.hpp  VoiceBus.cpp  VoiceBus.hpp  busmodules.hpp  components.cpp  components.hpp  design.cpp  design.hpp  design_json.cpp  design_json.hpp  docs.cpp  effectchain.cpp  effectchain.hpp  examples.cpp  parameters.hpp  scope.cpp  synth.cpp  synthvoice.cpp  synthvoice.hpp  voicebus.hpp
source/Components/: CamelEnvelope.h
source/SynthVoices/: ExSynthVoice.cpp  ExSynthVoice.h
source/connectiongraph/: CMakeLists.txt  connectiongraph.cpp  connectiongraph.hpp  inputoutputbus.hpp  instruction.hpp  module.hpp
source/dsp/: CMakeLists.txt  sinc.cpp  sinc.hpp
source/modules/: CMakeLists.txt  abs.cpp  abs.hpp  biquad.cpp  biquad.hpp  bleposc.cpp  bleposc.hpp  camelenvelope.cpp  camelenvelope.hpp  chamberlin.cpp  chamberlin.hpp  clamp.hpp  clampinv.cpp  clampinv.hpp  conversion.cpp  conversion.hpp  crossfade.cpp  crossfade.hpp  delay.cpp  delay.hpp  foldback.cpp  foldback.hpp  lag.cpp  lag.hpp  moduleregister.hpp  mul.cpp  mul.hpp  noise.cpp  noise.hpp  phase.cpp  phase.hpp  quant8.hpp  rlc.cpp  rlc.hpp  saturatoratan.cpp  saturatoratan.hpp  scaleshift.cpp  scaleshift.hpp  sine.cpp  sine.hpp  (+5 more)
test/: CMakeLists.txt  cli_synth.cpp  test_biquad.cpp  test_camelenvelope.cpp  test_connectiongraph.cpp  test_modules.cpp  test_modules.py  test_performance.cpp  test_serialization.cpp  test_synth.cpp
(+68 files in other folders)
